force-app/main/default/objects/Community_Giving__c/Community_Giving__c.object-meta.xml
<CustomObject>
    <description>Tracks the amounts approved via grant and donation requests from non profit organiziations</description>
    <label>Community Investment</label>
    <nameField>
        <displayFormat>FNBG-{00000}</displayFormat>
        <label>Community Giving Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Investments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>