force-app/main/default/objects/Community_Giving__c/fields/Adults_Provided_Education__c.field-meta.xml
<CustomField>
    <fullName>Adults_Provided_Education__c</fullName>
    <label># Adults Provided Education</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>