force-app/main/default/objects/Community_Giving__c/fields/Adults_Provided_Education_AI__c.field-meta.xml
<CustomField>
    <fullName>Adults_Provided_Education_AI__c</fullName>
    <description>Actual Impacts-- Educated workforce:  Number of adults provided education.</description>
    <encryptionScheme>None</encryptionScheme>
    <label># Adults Provided Education</label>
    <length>8</length>
    <type>Text</type>
</CustomField>