force-app/main/default/objects/Community_Giving__c/fields/Adults_Provided_Vocational_Training_AI__c.field-meta.xml
<CustomField>
    <fullName>Adults_Provided_Vocational_Training_AI__c</fullName>
    <description>Actual Impacts-- Educated Workforce:  Number of adults provided Career / Vocational training.</description>
    <encryptionScheme>None</encryptionScheme>
    <label># Adults Provided Vocational Training</label>
    <length>8</length>
    <type>Text</type>
</CustomField>