force-app/main/default/objects/Community_Giving__c/fields/Agreement_Executed__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Executed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agreement Executed</label>
    <type>Date</type>
</CustomField>