force-app/main/default/objects/Community_Giving__c/fields/Amount_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Awarded__c</fullName>
    <label>Amount Awarded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>