force-app/main/default/objects/Community_Giving__c/fields/Anedote_the_success_achieved_with_funds__c.field-meta.xml
<CustomField>
    <fullName>Anedote_the_success_achieved_with_funds__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anedote the success achieved with funds</label>
    <type>TextArea</type>
</CustomField>