force-app/main/default/objects/Community_Giving__c/fields/Annual_Independent_Audit__c.field-meta.xml
<CustomField>
    <fullName>Annual_Independent_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate whether the non-profit organization undergoes an annual independent audit.</description>
    <label>Annual Independent Audit</label>
    <type>Checkbox</type>
</CustomField>