force-app/main/default/objects/Community_Giving__c/fields/AP_Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>AP_Request_Submitted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AP Request Submitted</label>
    <type>Date</type>
</CustomField>