force-app/main/default/objects/Community_Giving__c/fields/Application_Round__c.field-meta.xml
<CustomField>
    <fullName>Application_Round__c</fullName>
    <label>Application Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round 1 2017</fullName>
            </value>
            <value>
                <fullName>Round 2 2017</fullName>
            </value>
            <value>
                <fullName>Round 3 2017</fullName>
            </value>
            <value>
                <fullName>Round 4 2017</fullName>
            </value>
            <value>
                <fullName>Round 1 2018</fullName>
            </value>
            <value>
                <fullName>Round 2 2018</fullName>
            </value>
            <value>
                <fullName>Round 3 2018</fullName>
            </value>
            <value>
                <fullName>Round 4 2018</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>