force-app/main/default/objects/Community_Giving__c/fields/Approved_Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Annual_Amount__c</fullName>
    <label>Approved Annual Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>