force-app/main/default/objects/Community_Giving__c/fields/Approved_by_CD_Committee__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_CD_Committee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved by CD Committee</label>
    <type>Date</type>
</CustomField>