force-app/main/default/objects/Community_Giving__c/fields/Approved_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved End Date</label>
    <type>Date</type>
</CustomField>