force-app/main/default/objects/Community_Giving__c/fields/Approved_Multi_Year__c.field-meta.xml
<CustomField>
    <fullName>Approved_Multi_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Multi-Year</label>
    <type>Checkbox</type>
</CustomField>