force-app/main/default/objects/Community_Giving__c/fields/Approved_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved Start Date</label>
    <type>Date</type>
</CustomField>