force-app/main/default/objects/Community_Giving__c/fields/Benefits_Provided__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Provided__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefits Provided</label>
    <length>255</length>
    <type>Text</type>
</CustomField>