force-app/main/default/objects/Community_Giving__c/fields/Brief_Program_Description__c.field-meta.xml
<CustomField>
    <fullName>Brief_Program_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brief Program Description</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>