force-app/main/default/objects/Community_Giving__c/fields/Business_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Business_Relationship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description of requesting organization’s business relationship with FNB.</inlineHelpText>
    <label>Business Relationship</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>