force-app/main/default/objects/Community_Giving__c/fields/CD_Director_Approval__c.field-meta.xml
<CustomField>
    <fullName>CD_Director_Approval__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CD Director Approval</label>
    <type>Date</type>
</CustomField>