force-app/main/default/objects/Community_Giving__c/fields/CD_Director_Approver__c.field-meta.xml
<CustomField>
    <fullName>CD_Director_Approver__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Salesforce user whom last edited the &quot;CD Director Approval&quot; date field.</inlineHelpText>
    <label>CD Director Approval Audit</label>
    <length>121</length>
    <type>Text</type>
</CustomField>