force-app/main/default/objects/Community_Giving__c/fields/Combined_Multi_Year_Amount__c.field-meta.xml
<CustomField>
    <fullName>Combined_Multi_Year_Amount__c</fullName>
    <label>Combined Multi Year Amount</label>
    <summarizedField>Commitment__c.Amount__c</summarizedField>
    <summaryForeignKey>Commitment__c.Community_Investment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>