force-app/main/default/objects/Community_Giving__c/fields/Community_Need_and_Strategy_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Community_Need_and_Strategy_to_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Community Need and Strategy to Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>