force-app/main/default/objects/Community_Giving__c/fields/Contract_Approved__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approved__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Approved</label>
    <type>Date</type>
</CustomField>