force-app/main/default/objects/Community_Giving__c/fields/Contract_Executed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Executed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Executed</label>
    <type>Date</type>
</CustomField>