force-app/main/default/objects/Community_Giving__c/fields/CRA_Approved__c.field-meta.xml
<CustomField>
    <fullName>CRA_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRA Approved</label>
    <type>Checkbox</type>
</CustomField>