force-app/main/default/objects/Community_Giving__c/fields/CRA_Qualified__c.field-meta.xml
<CustomField>
    <fullName>CRA_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRA Qualified?</label>
    <type>Checkbox</type>
</CustomField>