force-app/main/default/objects/Community_Giving__c/fields/CRA_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>CRA_Underwriting__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRA Underwriting</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>