force-app/main/default/objects/Community_Giving__c/fields/Date_of_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Contribution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Contribution</label>
    <type>Date</type>
</CustomField>