force-app/main/default/objects/Community_Giving__c/fields/Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>