force-app/main/default/objects/Community_Giving__c/fields/Decision_Summary__c.field-meta.xml
<CustomField>
    <fullName>Decision_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Decision Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>