force-app/main/default/objects/Community_Giving__c/fields/Decline_letter_sent__c.field-meta.xml
<CustomField>
    <fullName>Decline_letter_sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Decline letter sent</label>
    <type>Date</type>
</CustomField>