force-app/main/default/objects/Community_Giving__c/fields/Describe_Community_Need__c.field-meta.xml
<CustomField>
    <fullName>Describe_Community_Need__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Describe Community Need</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>