force-app/main/default/objects/Community_Giving__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description/Request Summary</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>