force-app/main/default/objects/Community_Giving__c/fields/EBP_and_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>EBP_and_Collaboration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EBP and Collaboration</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>