force-app/main/default/objects/Community_Giving__c/fields/Employee_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Employee_Relationship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Relationship</label>
    <length>50</length>
    <type>Text</type>
</CustomField>