force-app/main/default/objects/Community_Giving__c/fields/Employee_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Employee_Sponsor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Sponsor</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>