force-app/main/default/objects/Community_Giving__c/fields/Executive_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>Executive_Director_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executive Director Email</label>
    <type>Email</type>
</CustomField>