force-app/main/default/objects/Community_Giving__c/fields/Executive_Director_Name__c.field-meta.xml
<CustomField>
    <fullName>Executive_Director_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executive Director Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>