force-app/main/default/objects/Community_Giving__c/fields/Fake_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Fake_Purpose__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fake_Purpose</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>