force-app/main/default/objects/Community_Giving__c/fields/fakePurpose__c.field-meta.xml
<CustomField>
    <fullName>fakePurpose__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>fakePurpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>