force-app/main/default/objects/Community_Giving__c/fields/FIC_Survey_Application__c.field-meta.xml
<CustomField>
    <fullName>FIC_Survey_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FIC Survey Application</label>
    <referenceTo>FIC_Survey_Application__c</referenceTo>
    <relationshipLabel>Community Investments</relationshipLabel>
    <relationshipName>Community_Investments</relationshipName>
    <type>Lookup</type>
</CustomField>