force-app/main/default/objects/Community_Giving__c/fields/Flood_Collaborations__c.field-meta.xml
<CustomField>
    <fullName>Flood_Collaborations__c</fullName>
    <description>For site created to accept applications for flood relief.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flood Collaborations</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>