force-app/main/default/objects/Community_Giving__c/fields/Flood_Community_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Flood_Community_Focus_Area__c</fullName>
    <description>For site created to accept applications for flood relief March 2019.</description>
    <label>Flood Community Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addressing health and human service needs</fullName>
            </value>
            <value>
                <fullName>Cleaning up and protecting natural resources</fullName>
            </value>
            <value>
                <fullName>Implementing Housing Solutions</fullName>
            </value>
            <value>
                <fullName>Restoring Economic Activity and Small Business Vitality</fullName>
            </value>
            <value>
                <fullName>Strengthening infrastructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>