force-app/main/default/objects/Community_Giving__c/fields/Flood_Counties_Served__c.field-meta.xml
<CustomField>
    <fullName>Flood_Counties_Served__c</fullName>
    <description>For site created to accept applications for flood relief March 2019.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flood Counties Served</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>