force-app/main/default/objects/Community_Giving__c/fields/Flood_Describe_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Flood_Describe_Outcomes__c</fullName>
    <description>For site created to accept applications for flood relief March 2019</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flood Describe Outcomes</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>