force-app/main/default/objects/Community_Giving__c/fields/Flood_Describe_Track_Record__c.field-meta.xml
<CustomField>
    <fullName>Flood_Describe_Track_Record__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flood Describe Track Record</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>