force-app/main/default/objects/Community_Giving__c/fields/Flood_Funding_Use__c.field-meta.xml
<CustomField>
    <fullName>Flood_Funding_Use__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flood Funding Use</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>