force-app/main/default/objects/Community_Giving__c/fields/Flood_Long_Term_Recovery_Group__c.field-meta.xml
<CustomField>
    <fullName>Flood_Long_Term_Recovery_Group__c</fullName>
    <description>Indicate whether your organization is part of a Long-Term Recovery Group or Committee.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flood Long-Term Recovery Group</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>