force-app/main/default/objects/Community_Giving__c/fields/Flood_Volunteer_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Flood_Volunteer_Opportunities__c</fullName>
    <description>For site created to accept applications for flood relief March 2019.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flood Volunteer Opportunities</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>