force-app/main/default/objects/Community_Giving__c/fields/FNB_Business_Relationship__c.field-meta.xml
<CustomField>
    <fullName>FNB_Business_Relationship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FNB Business Relationship</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>