force-app/main/default/objects/Community_Giving__c/fields/FNB_Employee_Board_Members__c.field-meta.xml
<CustomField>
    <fullName>FNB_Employee_Board_Members__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description of FNB employees who currently serve as board members for the requesting organization.</inlineHelpText>
    <label>FNB Employee Board Members</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>