force-app/main/default/objects/Community_Giving__c/fields/FNB_Service__c.field-meta.xml
<CustomField>
    <fullName>FNB_Service__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FNB Service</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>