force-app/main/default/objects/Community_Giving__c/fields/formExpiredate__c.field-meta.xml
<CustomField>
    <fullName>formExpiredate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>formExpiredate</label>
    <type>Date</type>
</CustomField>