force-app/main/default/objects/Community_Giving__c/fields/Full_Name_and_date__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_and_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Full Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>