force-app/main/default/objects/Community_Giving__c/fields/Funds_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Funds_Disbursed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Funds Disbursed</label>
    <type>Date</type>
</CustomField>