force-app/main/default/objects/Community_Giving__c/fields/Grant_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contact_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grant Contact Email</label>
    <type>Email</type>
</CustomField>