force-app/main/default/objects/Community_Giving__c/fields/Homeownership_Educ_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Homeownership_Educ_Sessions__c</fullName>
    <label># Homeownership Educ. Sessions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>