force-app/main/default/objects/Community_Giving__c/fields/Homeownership_Educ_Sessions_AI__c.field-meta.xml
<CustomField>
    <fullName>Homeownership_Educ_Sessions_AI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># Homeownership Educ. Sessions</label>
    <length>5</length>
    <type>Text</type>
</CustomField>