force-app/main/default/objects/Community_Giving__c/fields/Housing_Units_Created_Built__c.field-meta.xml
<CustomField>
    <fullName>Housing_Units_Created_Built__c</fullName>
    <label># Housing Units Created/Built</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>