force-app/main/default/objects/Community_Giving__c/fields/Housing_Units_Created_Built_AI__c.field-meta.xml
<CustomField>
    <fullName>Housing_Units_Created_Built_AI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># Housing Units Created/Built</label>
    <length>5</length>
    <type>Text</type>
</CustomField>