force-app/main/default/objects/Community_Giving__c/fields/Housing_Units_Financed__c.field-meta.xml
<CustomField>
    <fullName>Housing_Units_Financed__c</fullName>
    <label># Housing Units Financed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>