force-app/main/default/objects/Community_Giving__c/fields/Hw_to_Measure_progm_toward_Prog_obj__c.field-meta.xml
<CustomField>
    <fullName>Hw_to_Measure_progm_toward_Prog_obj__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hw to measure prog toward Progm obj</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>