force-app/main/default/objects/Community_Giving__c/fields/Impact2__c.field-meta.xml
<CustomField>
    <fullName>Impact2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Impact</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>