force-app/main/default/objects/Community_Giving__c/fields/Impact_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Impact_Measurement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Impact Measurement</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>