force-app/main/default/objects/Community_Giving__c/fields/Impacts__c.field-meta.xml
<CustomField>
    <fullName>Impacts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Impacts</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>