force-app/main/default/objects/Community_Giving__c/fields/Indiv_Coaching_Sessions_w_Small_Bus__c.field-meta.xml
<CustomField>
    <fullName>Indiv_Coaching_Sessions_w_Small_Bus__c</fullName>
    <label># Indiv. Coaching Sessions w/ Small Bus.</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>