force-app/main/default/objects/Community_Giving__c/fields/Indiv_Coaching_Sessions_w_Small_Bus_AI__c.field-meta.xml
<CustomField>
    <fullName>Indiv_Coaching_Sessions_w_Small_Bus_AI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># Indiv. Coaching Sessions w/ Small Bus.</label>
    <length>8</length>
    <type>Text</type>
</CustomField>