force-app/main/default/objects/Community_Giving__c/fields/Individuals_Rec_Homeownership_Educ__c.field-meta.xml
<CustomField>
    <fullName>Individuals_Rec_Homeownership_Educ__c</fullName>
    <label># Individuals Rec. Homeownership Educ.</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>