force-app/main/default/objects/Community_Giving__c/fields/Individuals_Rec_Homeownership_Educ_AI__c.field-meta.xml
<CustomField>
    <fullName>Individuals_Rec_Homeownership_Educ_AI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># Individuals Rec. Homeownership Educ.</label>
    <length>5</length>
    <type>Text</type>
</CustomField>