force-app/main/default/objects/Community_Giving__c/fields/Individuals_Served_in_Prop_Program__c.field-meta.xml
<CustomField>
    <fullName>Individuals_Served_in_Prop_Program__c</fullName>
    <label># Individuals Served in Prop. Program</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>