force-app/main/default/objects/Community_Giving__c/fields/Individuals_Served_in_Prop_Program_AI__c.field-meta.xml
<CustomField>
    <fullName>Individuals_Served_in_Prop_Program_AI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># Individuals Served in Prop. Program</label>
    <length>8</length>
    <type>Text</type>
</CustomField>