force-app/main/default/objects/Community_Giving__c/fields/Jobs_Created_Full_Time__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Created_Full_Time__c</fullName>
    <label># Jobs Created - Full Time</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>