force-app/main/default/objects/Community_Giving__c/fields/Jobs_Created_Full_Time_AI__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Created_Full_Time_AI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># Jobs Created - Full Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>