force-app/main/default/objects/Community_Giving__c/fields/Jobs_Retained__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Retained__c</fullName>
    <label># Jobs Retained</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>