force-app/main/default/objects/Community_Giving__c/fields/MSA_Name__c.field-meta.xml
<CustomField>
    <fullName>MSA_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MSA Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>