force-app/main/default/objects/Community_Giving__c/fields/Multi_Year_Details__c.field-meta.xml
<CustomField>
    <fullName>Multi_Year_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Multi-Year Details</label>
    <length>80</length>
    <type>Text</type>
</CustomField>