force-app/main/default/objects/Community_Giving__c/fields/Multi_year_Request__c.field-meta.xml
<CustomField>
    <fullName>Multi_year_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-year Request</label>
    <type>Checkbox</type>
</CustomField>