force-app/main/default/objects/Community_Giving__c/fields/New_Businesses_Served__c.field-meta.xml
<CustomField>
    <fullName>New_Businesses_Served__c</fullName>
    <label># New Businesses Served</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>