force-app/main/default/objects/Community_Giving__c/fields/New_Businesses_Served_AI__c.field-meta.xml
<CustomField>
    <fullName>New_Businesses_Served_AI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># New Businesses Served</label>
    <length>5</length>
    <type>Text</type>
</CustomField>