force-app/main/default/objects/Community_Giving__c/fields/Non_Profit_City__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_City__c</fullName>
    <formula>Non_Profit_Organization__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Profit City</label>
    <type>Text</type>
</CustomField>