force-app/main/default/objects/Community_Giving__c/fields/Non_Profit_Organization__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non Profit Organization</label>
    <referenceTo>Volunteer_Organization__c</referenceTo>
    <relationshipName>Community_Givings</relationshipName>
    <type>Lookup</type>
</CustomField>