force-app/main/default/objects/Community_Giving__c/fields/Non_Profit_State__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_State__c</fullName>
    <formula>TEXT(Non_Profit_Organization__r.State_Province__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Profit State</label>
    <type>Text</type>
</CustomField>