force-app/main/default/objects/Community_Giving__c/fields/Non_Profit_Street__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Street__c</fullName>
    <formula>Non_Profit_Organization__r.Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Profit Street</label>
    <type>Text</type>
</CustomField>