force-app/main/default/objects/Community_Giving__c/fields/Non_Profit_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_ZIP__c</fullName>
    <formula>Non_Profit_Organization__r.Zip_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Profit ZIP</label>
    <type>Text</type>
</CustomField>