force-app/main/default/objects/Community_Giving__c/fields/Number_of_Housing_Units_Rehab_Renov__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Housing_Units_Rehab_Renov__c</fullName>
    <label># Housing Units Rehabilitated/Renovated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>